--- a/ColorNumber/Storyboard/Base.lproj/Library.storyboard
+++ b/ColorNumber/Storyboard/Base.lproj/Library.storyboard
@@ -130,8 +130,8 @@
                                         <color key="backgroundColor" red="0.91755962369999999" green="0.91771018510000002" blue="0.91752761599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <view key="tableFooterView" contentMode="scaleToFill" id="EMQ-lj-I8y">
-                                            <rect key="frame" x="0.0" y="428" width="375" height="1"/>
+                                        <view key="tableFooterView" contentMode="scaleToFill" id="wm2-Ao-AA8">
+                                            <rect key="frame" x="0.0" y="428" width="375" height="72"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
@@ -415,6 +415,6 @@
         <image name="ic_trending" width="27" height="27"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SC3-8y-b19"/>
+        <segue reference="fWo-nB-1v7"/>
     </inferredMetricsTieBreakers>
 </document>
